[package]
name = "ota-plus"
version = "0.0.1"
authors = ["Eric Hartsuyker <eric.hartsuyker@advancedtelematic.org>"]
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
clap = "2"
data-encoding = "2.0.0-rc.1"
error-chain = "0.10"
itoa = "0.3"
ring = "0.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "2"
toml = "0.4"

[lib]
name = "ota_plus"

[[bin]]
name = "ota-plus"
path = "src/bin/ota_plus.rs"
doc = false
