[package]
name = "ota-plus"
version = "0.0.1"
authors = ["Eric Hartsuyker <eric.hartsuyker@advancedtelematic.org>"]
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
clap = "2"
curve25519-dalek = "0.10"
data-encoding = "2.0.0-rc.1"
derp = "0.0.10"
env_logger = "0.4.3"
error-chain = "0.10"
itoa = "0.3"
log = "0.3.8"
pem = "0.4.1"
reqwest = "0.7.2"
ring = { version = "0.11", features = ["rsa_signing"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "2"
toml = "0.4"
untrusted = "0.5"
uuid = { version = "0.5.0", features = ["serde", "v4"] }

[lib]
name = "ota_plus"

[[bin]]
name = "ota-plus"
path = "src/bin/ota_plus.rs"
doc = false
